@@ -10,12 +10,13 @@
  */
 
 /**
- * @copyright    XOOPS Project https://xoops.org/
+ * @copyright    XOOPS Project (https://xoops.org)/
  * @license      GNU GPL 2.0 or later (https://www.gnu.org/licenses/gpl-2.0.html)
- * @author       Kazumi Ono (AKA onokazu) https://www.myweb.ne.jp/, https://xoops.org/, https://jp.xoops.org/
+ * @author       Kazumi Ono (AKA onokazu) http://www.myweb.ne.jp/, https://xoops.org/, http://jp.xoops.org/
  * @author       XOOPS Development Team
  */
 
+use Xmf\Request;
 use Xmf\Module\Admin;
 use XoopsModules\Newbb\{
     Common\TestdataButtons,
@@ -174,7 +175,7 @@ $adminObject->displayIndex();
 
 require_once __DIR__ . '/admin_footer.php';
 
-$cacheHelper = Utility::cleanCache();
+Utility::cleanCache();
 //$cacheHelper = new \Xmf\Module\Helper\Cache('newbb');
 //$cacheHelper->delete('config');
 //$cacheHelper->delete('permission');
