@@ -10,7 +10,6 @@
  */
 
 use Xmf\Request;
-use XoopsModules\Newbb\ForumHandler;
 use XoopsModules\Newbb\{Helper,
     ForumHandler,
     ObjectTree,
@@ -202,7 +201,7 @@ foreach (array_keys($categories) as $id) {
     if ('' === $title) {
         $title = $url;
     }
-    $title = htmlspecialchars($title, ENT_QUOTES | ENT_HTML5);
+    $title = htmlspecialchars($title??'', ENT_QUOTES | ENT_HTML5);
     if ('' !== $url) {
         $cat_sponsor = ['title' => $title, 'link' => formatURL($url)];
     }
