@@ -1,3 +1,8 @@
+<h5>5.1.0 Beta 6 [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11-Beta2, PHP 7.4.32, PHP 8.2.0 RC5
+<hr>
+- PHP 8.2 updates (mamba)
+
+
 <h5>5.1.0 Beta 5 [2022-02-22]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.22, PHP 8.0.8
 <hr>
 - index.html in /preloads (mamba)
